--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,22 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_quotes_translated"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        tools:text="..."
+        android:textAlignment="center"
+        style="@style/editTextStyle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_quotes"
+        app:layout_constraintVertical_bias="0.0" />
+
     <Button
         android:id="@+id/btn_quotes_search"
         android:layout_width="wrap_content"
@@ -47,5 +63,18 @@
         app:layout_constraintBottom_toTopOf="@+id/tv_quotes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+
+    <Spinner
+        android:id="@+id/spinner_languages"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="35dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_quotes_search"
+        app:layout_constraintEnd_toEndOf="@+id/tv_quotes_translated"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/tv_quotes_translated"
+        app:layout_constraintTop_toBottomOf="@+id/tv_quotes_translated"
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
