feat(recycler hitoric): incluindo pagina de historico

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,9 @@
         <item name="android:layout_marginTop">15dp</item>
     </style>
 
+    <style name="NameActionBar">
+<!--        <item name="windowActionBar">true</item>-->
+    </style>
+
+
 </resources>
