--- a/app/src/main/res/layout/quote_historic_item.xml
+++ b/app/src/main/res/layout/quote_historic_item.xml
@@ -27,7 +27,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imgKanye"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Mensagem Kanye do dia!" />
+            android:text="Mensagem Kanye do dia!"
+            />
 
         <TextView
             android:id="@+id/tvMensagem"
@@ -58,7 +59,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.08"
             app:layout_constraintWidth_percent="0.3"
-            tools:srcCompat="@drawable/kanye_img"/>
+            android:contentDescription="kanye face image"
+            app:srcCompat="@drawable/kanye_img"/>
 
         <ImageView
             android:id="@+id/dateIcon"
